--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@ body {
     margin: 0;
     background: url("./assets/background.jpeg") no-repeat center center fixed;
     background-size: cover;
-    overflow: hidden;
 }
 
 .title{
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-bottom: 20px;
     width: 100%;
+    position: relative;
     height: 10vh;
     color: white;
     text-align: center;
@@ -21,8 +22,8 @@ body {
 }
 
 .beatbox {
-    width: 600px;
-    height: 600px;
+    max-width: 600px;
+    padding: 30px;
     background: #333;
     border-radius: 20px;
     display: flex;
